--- a/direct-deal-account-service/build.gradle
+++ b/direct-deal-account-service/build.gradle
@@ -29,16 +29,20 @@ dependencies {
 	//implementation 'org.springframework.boot:spring-boot-starter-parent'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	//implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	//implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	//implementation 'io.springfox:springfox-swagger2:2.10.5'	
 	implementation 'io.springfox:springfox-swagger-ui:2.8.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
