--- a/direct-deal-account-service/src/main/resources/application-dev.properties
+++ b/direct-deal-account-service/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.path=/h2
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
