--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,11 @@
  * The settings file is used to specify which projects to include in your build.
  *
  * Detailed information about configuring a multi-project build in Gradle can be found
- * in the user manual at https://docs.gradle.org/6.8.3/userguide/multi_project_builds.html
+ * in the user manual at https://docs.gradle.org/7.0.2/userguide/multi_project_builds.html
  */
 
 rootProject.name = 'direct-deal'
-include('direct-deal-account-service')
+
+include 'direct-deal-common'
+include 'direct-deal-sale-service'
+include 'direct-deal-sale-catalog-service'
