--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	// implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 	// implementation "org.jetbrains.kotlin:kotlin-reflect"
 	// implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	implementation group: 'commons-io', name: 'commons-io', version: '2.9.0'
+	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
