--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -19,3 +19,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+#management.server.port=9000
+#management.endpoints.web.base-path=/
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=env,beans
+
+# spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=0
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=10MB
+# spring.servlet.multipart.resolve-lazily=true
