--- a/direct-deal-sale-catalog-service/.settings/org.eclipse.buildship.core.prefs
+++ b/direct-deal-sale-catalog-service/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(/home/rick/.sdkman/candidates/gradle/current))
-connection.project.dir=../direct-deal-common
+connection.project.dir=../direct-deal-sale-service
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/usr/lib/jvm/java-11-openjdk-amd64
