--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #management.server.port=9000
@@ -26,8 +27,15 @@ management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=env,beans
 
-# spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.file-size-threshold=0
-#spring.servlet.multipart.max-file-size=1MB
-#spring.servlet.multipart.max-request-size=10MB
-# spring.servlet.multipart.resolve-lazily=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=0
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.resolve-lazily=false
+
+#spring.task.execution.pool.core-size=50
+#spring.task.execution.pool.max-size=200
+#spring.task.execution.pool.queue-capacity=100
+#spring.task.execution.shutdown.await-termination=true
+#spring.task.execution.shutdown.await-termination-period=10s
+#spring.task.execution.thread-name-prefix=async-task-exec-
