--- a/direct-deal-sale-catalog-service/bin/main/application.properties
+++ b/direct-deal-sale-catalog-service/bin/main/application.properties
@@ -6,24 +6,35 @@ logging.level.kr.co.directdeal.sale.catalogservice=debug
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
 axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
-spring.h2.console.enabled=true
+#security.basic.enabled=false 
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.data.mongodb.uri=mongodb://root:root@localhost:27017
+#spring.data.mongodb.uri=mongodb://user:user@localhost:27017
+#spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+#spring.data.mongodb.username=user
+#spring.data.mongodb.password=user
+spring.data.mongodb.database=test
 
-spring.jpa.open-in-view=false
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.h2.console.enabled=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-# spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.jpa.open-in-view=false
+#spring.jpa.defer-datasource-initialization=true
+##spring.jpa.hibernate.ddl-auto=create-drop#
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # spring.output.ansi.enabled=always
 # logging.file.path=.
 logging.level.kr.co.directdeal=DEBUG
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
