--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
 	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
@@ -18,7 +18,7 @@ dependencies {
 	implementation 'org.axonframework:axon-spring-boot-starter:4.5'
 	implementation 'org.axonframework:axon-micrometer:4.5'
 	
-	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
 
