--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -1,42 +1,14 @@
 plugins {
 	id 'org.springframework.boot' version '2.5.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	// id 'org.jetbrains.kotlin.jvm' version '1.5.10'
-	// id 'org.jetbrains.kotlin.plugin.spring' version '1.5.10'
 	id 'kr.co.directdeal.java-common-conventions'
 }
 
-/*
-compileKotlin.destinationDir = compileJava.destinationDir
-
-sourceSets {
-	main.java.srcDirs = ['src/main/java']
-	main.kotlin.srcDirs = ['src/main/kotlin']
-	main.resources.srcDirs = ['src/main/resources']
-}
-
-compileKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
-*/
-
 dependencies {
 	implementation project(':direct-deal-common')
-	
-	// implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
-	// implementation "org.jetbrains.kotlin:kotlin-reflect"
-	// implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-	implementation group: 'commons-io', name: 'commons-io', version: '2.9.0'
-	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+
+	implementation 'commons-io:commons-io:2.9.0'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 
@@ -53,7 +25,11 @@ dependencies {
 	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
 	implementation 'org.apache.kafka:kafka-clients:2.8.0'
 
-	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
+	implementation group: 'org.axonframework.extensions.mongo', name: 'axon-mongo', version: '4.4'
+	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
+
+	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
 
