--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -37,6 +37,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#spring.data.mongodb.uri=mongodb://user:user@localhost:27017
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27018
+#spring.data.mongodb.username=user
+#spring.data.mongodb.password=user
+#spring.data.mongodb.database=test
+
 #management.server.port=9000
 #management.endpoints.web.base-path=/
 management.endpoints.enabled-by-default=true
