setting the kafka message broker for CQRS+ES

--- a/direct-deal-sale-catalog-service/bin/main/application.properties
+++ b/direct-deal-sale-catalog-service/bin/main/application.properties
@@ -4,7 +4,38 @@ spring.application.name=Sale-Catalog-Service
 logging.level.kr.co.directdeal.sale.catalogservice=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
+axon.axonserver.enabled=false
 axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+
+axon.kafka.bootstrap-servers=localhost:9092
+axon.kafka.client-id=sale-item-consumer-${random.int}
+axon.kafka.default-topic=local.event
+axon.kafka.properties.security.protocol=PLAINTEXT
+
+#axon.kafka.publisher.confirmation-mode=transactional
+
+#axon.kafka.producer.transaction-id-prefix=kafka-sample
+#axon.kafka.producer.retries=0
+#axon.kafka.producer.event-processor-mode=subscribing
+
+axon.kafka.fetcher.poll-timeout=3000
+
+#axon.kafka.consumer.bootstrap-servers=localhost:9092
+#axon.kafka.consumer.client-id=kafka-axon-example2
+axon.kafka.consumer.enable-auto-commit=true
+axon.kafka.consumer.auto-commit-interval=3000
+axon.kafka.consumer.event-processor-mode=tracking
+
+axon.eventhandling.processors.saleItem.source=streamableKafkaMessageSource
+axon.eventhandling.processors.saleItem.mode=TRACKING
+axon.eventhandling.processors.saleItem.thread-count=1
+axon.eventhandling.processors.saleItem.batch-size=1
+#axon.eventhandling.processors.mode=tracking
+#axon.eventhandling.processors.source=eventBus
+
+axon.serializer.general=xstream
+axon.serializer.events=xstream
+axon.serializer.messages=xstream
 
 #security.basic.enabled=false 
 
@@ -17,20 +48,20 @@ spring.data.mongodb.port=27017
 #spring.data.mongodb.password=user
 spring.data.mongodb.database=test
 
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
 
-#spring.jpa.open-in-view=false
-#spring.jpa.defer-datasource-initialization=true
-##spring.jpa.hibernate.ddl-auto=create-drop#
+spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # spring.output.ansi.enabled=always
 # logging.file.path=.
@@ -38,3 +69,6 @@ logging.level.kr.co.directdeal=DEBUG
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
