--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -4,7 +4,23 @@ spring.application.name=Sale-Service
 logging.level.kr.co.directdeal.saleservice=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
+axon.axonserver.enabled=false
 axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+
+axon.kafka.bootstrap-servers=localhost:9092
+axon.kafka.client-id=kafka-axon-example
+axon.kafka.default-topic=local.event
+axon.kafka.properties.security.protocol=PLAINTEXT
+
+axon.kafka.publisher.confirmation-mode=transactional
+
+axon.kafka.producer.transaction-id-prefix=kafka-sample
+#axon.kafka.producer.retries=0
+axon.kafka.producer.event-processor-mode=subscribing
+
+axon.serializer.general=xstream
+axon.serializer.events=xstream
+axon.serializer.messages=xstream
 
 spring.h2.console.enabled=true
 
