--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -7,18 +7,24 @@ plugins {
 dependencies {
 	implementation project(':direct-deal-common')
 
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
 	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
 	// testImplementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '3.0.0'
 
-	implementation 'org.axonframework:axon-spring-boot-starter:4.5'
+	implementation ('org.axonframework:axon-spring-boot-starter:4.5') {
+		exclude group: "org.axonframework", module: 'axon-server-connector'
+	}
 	implementation 'org.axonframework:axon-micrometer:4.5'
-	
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
+	implementation 'org.apache.kafka:kafka-clients:2.8.0'
+
+	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
 
