--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -44,10 +44,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	implementation 'org.axonframework:axon-spring-boot-starter:4.5'
+	// implementation ('org.axonframework:axon-spring-boot-starter:4.5')
+	implementation ('org.axonframework:axon-spring-boot-starter:4.5') {
+		exclude group: "org.axonframework", module: 'axon-server-connector'
+	}
 	implementation 'org.axonframework:axon-micrometer:4.5'
-	
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
+	implementation 'org.apache.kafka:kafka-clients:2.8.0'
+
+	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
 
