apply minor a setting update

--- a/direct-deal-sale-catalog-service/src/main/resources/application.properties
+++ b/direct-deal-sale-catalog-service/src/main/resources/application.properties
@@ -8,7 +8,8 @@ axon.axonserver.enabled=false
 axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
 axon.kafka.bootstrap-servers=localhost:9092
-axon.kafka.client-id=sale-item-consumer-${random.int}
+#axon.kafka.client-id=sale-item-consumer-${random.int}
+axon.kafka.client-id=sale-item-consumer
 axon.kafka.default-topic=local.event
 axon.kafka.properties.security.protocol=PLAINTEXT
 
