--- a/direct-deal-common/build.gradle
+++ b/direct-deal-common/build.gradle
@@ -32,11 +32,17 @@ dependencies {
 	// implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 	// implementation "org.jetbrains.kotlin:kotlin-reflect"
 	// implementation "org.jetbrains.kotlin:kotlin-stdlib"
-
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
-	implementation 'org.axonframework:axon-spring-boot-starter:4.5'
-	implementation 'org.axonframework:axon-micrometer:4.5'
+	compileOnly 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.springframework.boot:spring-boot-starter-security'
+	compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
+	
+	compileOnly 'org.axonframework:axon-spring-boot-starter:4.5'
+	compileOnly 'org.axonframework:axon-micrometer:4.5'
+
+	compileOnly 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
