--- a/direct-deal-account-service/src/main/resources/application-dev.properties
+++ b/direct-deal-account-service/src/main/resources/application-dev.properties
@@ -24,7 +24,7 @@ jwt.access-token-validity-in-seconds=3600
 jwt.refresh-token-validity-in-seconds=2592000
 
 spring.output.ansi.enabled=always
-logging.file.path=.
+#logging.file.path=.
 logging.level.kr.co.directdeal.accountservice=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
