--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 	implementation 'commons-io:commons-io:2.9.0'
 	implementation 'commons-fileupload:commons-fileupload:1.4'
 
-	implementation "org.springframework.boot:spring-boot-starter-actuator"
+	// implementation "org.springframework.boot:spring-boot-starter-actuator"
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -28,7 +28,7 @@ dependencies {
 	implementation group: 'org.axonframework.extensions.mongo', name: 'axon-mongo', version: '4.4'
 	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
 
-	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
 
