--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=Sale-Service
 logging.level.kr.co.directdeal.saleservice=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
-axon.axonserver.enabled=false
-axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+#axon.axonserver.enabled=false
+#axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
 axon.kafka.bootstrap-servers=localhost:9092
 axon.kafka.client-id=kafka-axon-example
@@ -23,6 +23,7 @@ axon.serializer.events=xstream
 axon.serializer.messages=xstream
 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
@@ -47,8 +48,8 @@ spring.data.mongodb.database=test
 
 #management.server.port=9000
 #management.endpoints.web.base-path=/
-management.endpoints.enabled-by-default=true
-management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
+#management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=env,beans
 
 spring.servlet.multipart.enabled=true
