implemented the transaction history service

--- a/direct-deal-sale-catalog-service/src/main/resources/application.properties
+++ b/direct-deal-sale-catalog-service/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=Sale-Catalog-Service
 logging.level.kr.co.directdeal.sale.catalogservice=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
-axon.axonserver.enabled=false
-axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+#axon.axonserver.enabled=false
+#axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
 axon.kafka.bootstrap-servers=localhost:9092
 #axon.kafka.client-id=sale-item-consumer-${random.int}
