--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include 'direct-deal-common'
 include 'direct-deal-account-service'
 include 'direct-deal-sale-service'
 include 'direct-deal-sale-catalog-service'
+include 'direct-deal-transaction-history-service'
