--- a/direct-deal-transaction-history-service/src/main/resources/application.properties
+++ b/direct-deal-transaction-history-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8081
-spring.application.name=Sale-Service
+server.port=8083
+spring.application.name=Transaction-History-Service
 # Debugging on
 logging.level.kr.co.directdeal.saleservice=debug
 
@@ -8,15 +8,31 @@ logging.level.kr.co.directdeal.saleservice=debug
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
 axon.kafka.bootstrap-servers=localhost:9092
-axon.kafka.client-id=kafka-axon-example
+axon.kafka.client-id=transaction-history-sale-item-consumer-${random.int}
+#axon.kafka.client-id=sale-item-consumer
 axon.kafka.default-topic=local.event
 axon.kafka.properties.security.protocol=PLAINTEXT
 
-axon.kafka.publisher.confirmation-mode=transactional
+#axon.kafka.publisher.confirmation-mode=transactional
 
-axon.kafka.producer.transaction-id-prefix=kafka-sample
+#axon.kafka.producer.transaction-id-prefix=kafka-sample
 #axon.kafka.producer.retries=0
-axon.kafka.producer.event-processor-mode=subscribing
+#axon.kafka.producer.event-processor-mode=subscribing
+
+axon.kafka.fetcher.poll-timeout=3000
+
+#axon.kafka.consumer.bootstrap-servers=localhost:9092
+#axon.kafka.consumer.client-id=kafka-axon-example2
+axon.kafka.consumer.enable-auto-commit=true
+axon.kafka.consumer.auto-commit-interval=3000
+axon.kafka.consumer.event-processor-mode=tracking
+
+axon.eventhandling.processors.transactionHistory.source=streamableKafkaMessageSource
+axon.eventhandling.processors.transactionHistory.mode=TRACKING
+axon.eventhandling.processors.transactionHistory.thread-count=1
+axon.eventhandling.processors.transactionHistory.batch-size=1
+#axon.eventhandling.processors.mode=tracking
+#axon.eventhandling.processors.source=eventBus
 
 axon.serializer.general=xstream
 axon.serializer.events=xstream
@@ -35,16 +51,19 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.data.mongodb.uri=mongodb://user:user@localhost:27017
 #spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27018
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27018
 #spring.data.mongodb.username=user
 #spring.data.mongodb.password=user
-spring.data.mongodb.database=test
+#spring.data.mongodb.database=test
 
 #management.server.port=9000
 #management.endpoints.web.base-path=/
@@ -52,11 +71,11 @@ spring.data.mongodb.database=test
 #management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=env,beans
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=0
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.resolve-lazily=false
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=0
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=10MB
+#spring.servlet.multipart.resolve-lazily=false
 
 #spring.task.execution.pool.core-size=50
 #spring.task.execution.pool.max-size=200
