implemented the chatting service

--- a/direct-deal-chatting-service/src/main/resources/application.properties
+++ b/direct-deal-chatting-service/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-server.port=8083
-spring.application.name=Transaction-History-Service
+server.port=8085
+spring.application.name=Chatting-Service
 # Debugging on
-logging.level.kr.co.directdeal.transactionhistoryservice=debug
+logging.level.kr.co.directdeal.chattingservice=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
 #axon.axonserver.enabled=false
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
 axon.kafka.bootstrap-servers=localhost:9092
-axon.kafka.client-id=transaction-history-sale-item-consumer-${random.int}
+axon.kafka.client-id=chatting-sale-item-consumer-${random.int}
 #axon.kafka.client-id=sale-item-consumer
 axon.kafka.default-topic=local.event
 axon.kafka.properties.security.protocol=PLAINTEXT
