--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include 'direct-deal-account-service'
 include 'direct-deal-sale-service'
 include 'direct-deal-sale-catalog-service'
 include 'direct-deal-transaction-history-service'
+include 'direct-deal-chatting-service'
