--- a/direct-deal-chatting-service/build.gradle
+++ b/direct-deal-chatting-service/build.gradle
@@ -42,7 +42,10 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-inline'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
