--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -36,7 +36,9 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-inline'
 }
 
 test {
