--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testImplementation 'org.mockito:mockito-inline'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
