--- a/direct-deal-chatting-service/src/main/resources/application.properties
+++ b/direct-deal-chatting-service/src/main/resources/application.properties
@@ -14,36 +14,36 @@ jwt.refresh-token-validity-in-seconds=2592000
 #axon.axonserver.enabled=false
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
-axon.kafka.bootstrap-servers=localhost:9092
-axon.kafka.client-id=chatting-sale-item-consumer-${random.int}
-#axon.kafka.client-id=sale-item-consumer
-axon.kafka.default-topic=local.event
-axon.kafka.properties.security.protocol=PLAINTEXT
-
-#axon.kafka.publisher.confirmation-mode=transactional
-
-#axon.kafka.producer.transaction-id-prefix=kafka-sample
-#axon.kafka.producer.retries=0
-#axon.kafka.producer.event-processor-mode=subscribing
-
-axon.kafka.fetcher.poll-timeout=3000
-
-#axon.kafka.consumer.bootstrap-servers=localhost:9092
-#axon.kafka.consumer.client-id=kafka-axon-example2
-axon.kafka.consumer.enable-auto-commit=true
-axon.kafka.consumer.auto-commit-interval=3000
-axon.kafka.consumer.event-processor-mode=tracking
-
-axon.eventhandling.processors.transactionHistory.source=streamableKafkaMessageSource
-axon.eventhandling.processors.transactionHistory.mode=TRACKING
-axon.eventhandling.processors.transactionHistory.thread-count=1
-axon.eventhandling.processors.transactionHistory.batch-size=1
-#axon.eventhandling.processors.mode=tracking
-#axon.eventhandling.processors.source=eventBus
-
-axon.serializer.general=xstream
-axon.serializer.events=xstream
-axon.serializer.messages=xstream
+#axon.kafka.bootstrap-servers=localhost:9092
+#axon.kafka.client-id=chatting-sale-item-consumer-${random.int}
+##axon.kafka.client-id=sale-item-consumer
+#axon.kafka.default-topic=local.event
+#axon.kafka.properties.security.protocol=PLAINTEXT
+#
+##axon.kafka.publisher.confirmation-mode=transactional
+#
+##axon.kafka.producer.transaction-id-prefix=kafka-sample
+##axon.kafka.producer.retries=0
+##axon.kafka.producer.event-processor-mode=subscribing
+#
+#axon.kafka.fetcher.poll-timeout=3000
+#
+##axon.kafka.consumer.bootstrap-servers=localhost:9092
+##axon.kafka.consumer.client-id=kafka-axon-example2
+#axon.kafka.consumer.enable-auto-commit=true
+#axon.kafka.consumer.auto-commit-interval=3000
+#axon.kafka.consumer.event-processor-mode=tracking
+#
+#axon.eventhandling.processors.transactionHistory.source=streamableKafkaMessageSource
+#axon.eventhandling.processors.transactionHistory.mode=TRACKING
+#axon.eventhandling.processors.transactionHistory.thread-count=1
+#axon.eventhandling.processors.transactionHistory.batch-size=1
+##axon.eventhandling.processors.mode=tracking
+##axon.eventhandling.processors.source=eventBus
+#
+#axon.serializer.general=xstream
+#axon.serializer.events=xstream
+#axon.serializer.messages=xstream
 
 spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
