--- a/direct-deal-gateway/build.gradle
+++ b/direct-deal-gateway/build.gradle
@@ -4,6 +4,11 @@ plugins {
 	id 'java'
 }
 
+bootJar {
+	baseName = 'direct-deal-gateway'
+	version = '0.1'
+}
+
 group = 'kr.co.directdeal.gateway'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
