--- a/direct-deal-sale-catalog-service/src/main/resources/application.properties
+++ b/direct-deal-sale-catalog-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.application.name=Sale-Catalog-Service
 
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
 
 # Debugging on
@@ -23,9 +23,9 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 #axon.axonserver.enabled=false
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
-axon.kafka.bootstrap-servers=localhost:9092
+axon.kafka.bootstrap-servers=kafka:9092
 #axon.kafka.client-id=sale-item-consumer-${random.int}
-axon.kafka.client-id=sale-item-consumer
+axon.kafka.client-id=sale-catalog-service-consumer-${random.int}
 axon.kafka.default-topic=local.event
 axon.kafka.properties.security.protocol=PLAINTEXT
 
