--- a/direct-deal-transaction-history-service/src/main/resources/application.properties
+++ b/direct-deal-transaction-history-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ jwt.refresh-token-validity-in-seconds=2592000
 #axon.axonserver.enabled=false
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
-axon.kafka.bootstrap-servers=localhost:9092
+axon.kafka.bootstrap-servers=kafka:9092
 axon.kafka.client-id=transaction-history-sale-item-consumer-${random.int}
 #axon.kafka.client-id=sale-item-consumer
 axon.kafka.default-topic=local.event
