--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -14,15 +14,14 @@ jwt.refresh-token-validity-in-seconds=2592000
 #axon.axonserver.enabled=false
 #axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
 
-axon.kafka.bootstrap-servers=localhost:9092
-axon.kafka.client-id=kafka-axon-example
+axon.kafka.bootstrap-servers=kafka:9092
+axon.kafka.client-id=sale-service-producer-${random.int}
 axon.kafka.default-topic=local.event
 axon.kafka.properties.security.protocol=PLAINTEXT
-
 axon.kafka.publisher.confirmation-mode=transactional
 
-axon.kafka.producer.transaction-id-prefix=kafka-sample
-#axon.kafka.producer.retries=0
+axon.kafka.producer.retries=2
+axon.kafka.producer.transaction-id-prefix=sale-service
 axon.kafka.producer.event-processor-mode=subscribing
 
 axon.serializer.general=xstream
@@ -30,7 +29,6 @@ axon.serializer.events=xstream
 axon.serializer.messages=xstream
 
 spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
