--- a/direct-deal-transaction-history-service/build.gradle
+++ b/direct-deal-transaction-history-service/build.gradle
@@ -4,6 +4,11 @@ plugins {
 	id 'kr.co.directdeal.java-common-conventions'
 }
 
+bootJar {
+	baseName = 'direct-deal-transaction-history-service'
+	version = '0.1'
+}
+
 dependencies {
 	implementation project(':direct-deal-common')
 
