--- a/direct-deal-gateway/build.gradle
+++ b/direct-deal-gateway/build.gradle
@@ -24,6 +24,7 @@ ext {
 }
 
 dependencies {
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
