--- a/direct-deal-gateway/src/main/resources/application-route-v1.yml
+++ b/direct-deal-gateway/src/main/resources/application-route-v1.yml
@@ -5,16 +5,81 @@ spring:
             #    - name: GlobalFilter
             #    - args:
             routes:
-            - id: account-controller
+            - id: account-service
               uri: http://account-service:8080/
               predicates:
               - Path=/api/v1/account/**
               filters:
               - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
-
-            - id: auth-controller
+            - id: auth-service
               uri: http://account-service:8080/
               predicates:
               - Path=/api/v1/auth/login
               filters:
               - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: sale-service-item
+              uri: http://sale-service:8081/
+              predicates:
+              - Path=/api/v1/item/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: sale-service-favorite
+              uri: http://sale-service:8081/
+              predicates:
+              - Path=/api/v1/favorite/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment}
+            - id: sale-service-category
+              uri: http://sale-service:8081/
+              predicates:
+              - Path=/api/v1/category/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: sale-service-image
+              uri: http://sale-service:8081/
+              predicates:
+              - Path=/api/v1/image/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: sale-catalog-service-saleitem
+              uri: http://sale-catalog-service:8082/
+              predicates:
+              - Path=/api/v1/saleitem/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: sale-catalog-service-salelist
+              uri: http://sale-catalog-service:8082/
+              predicates:
+              - Path=/api/v1/salelist/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment}
+            - id: transaction-history-service-transaction-history
+              uri: http://transaction-history-service:8083/
+              predicates:
+              - Path=/api/v1/transaction-history/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: transaction-history-service-buy-history
+              uri: http://transaction-history-service:8083/
+              predicates:
+              - Path=/api/v1/buy-history/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment} 
+            - id: chatting-service
+              uri: http://chatting-service:8085/
+              predicates:
+              - Path=/api/v1/chatting/**
+              filters:
+              - RewritePath=/api/v1(?<segment>/?.*), $\{segment}
+
+
+
+
+
+
+
+
+
+              
+
+            
