--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
-	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
+	//implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
 
 	implementation ('org.axonframework:axon-spring-boot-starter:4.5') {
 		exclude group: "org.axonframework", module: 'axon-server-connector'
@@ -37,7 +37,8 @@ dependencies {
 
 	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'mysql:mysql-connector-java'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
