--- a/direct-deal-account-service/src/main/resources/application-dev.properties
+++ b/direct-deal-account-service/src/main/resources/application-dev.properties
@@ -1,24 +1,30 @@
 server.port=8080
 spring.application.name=Account-Service
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql:3306/DIRECT-DEAL-ACCOUNT-DB?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=direct-deal-account
+spring.datasource.password=secret
+
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.header=Authorization
