--- a/direct-deal-chatting-service/build.gradle
+++ b/direct-deal-chatting-service/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 
 	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	runtimeOnly 'com.h2database:h2'
+	// runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'mysql:mysql-connector-java'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
