--- a/direct-deal-common/build.gradle
+++ b/direct-deal-common/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'kr.co.directdeal.java-library-conventions'
 }
 
+bootJar.enabled = false
+
 // compileKotlin.destinationDir = compileJava.destinationDir
 
 // sourceSets {
