--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -28,28 +28,44 @@ axon.serializer.general=xstream
 axon.serializer.events=xstream
 axon.serializer.messages=xstream
 
-spring.h2.console.enabled=true
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql:3306/DIRECT-DEAL-SALE-DB?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=direct-deal-sale
+spring.datasource.password=secret
 
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.properties.hibernate.format_sql=true
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.h2.console.enabled=true
+
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.jpa.open-in-view=false
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 #spring.data.mongodb.uri=mongodb://user:user@localhost:27017
-#spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27018
-#spring.data.mongodb.username=user
-#spring.data.mongodb.password=user
-spring.data.mongodb.database=test
+spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27018
+spring.data.mongodb.host=mongo
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=root
+spring.data.mongodb.password=secret
+spring.data.mongodb.database=SALE_SERVICE_DB
 
 #management.server.port=9000
 #management.endpoints.web.base-path=/
