--- a/direct-deal-transaction-history-service/src/main/resources/application.properties
+++ b/direct-deal-transaction-history-service/src/main/resources/application.properties
@@ -45,20 +45,32 @@ axon.serializer.general=xstream
 axon.serializer.events=xstream
 axon.serializer.messages=xstream
 
-spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+##spring.h2.console.path=/h2
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.jpa.open-in-view=false
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+##spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql:3306/DIRECT-DEAL-TRANSACTION-HISTORY-DB?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=direct-deal-transaction-history
+spring.datasource.password=secret
 
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
