implemented the register-item page

--- a/direct-deal-gateway/src/main/resources/application-route-v1.yml
+++ b/direct-deal-gateway/src/main/resources/application-route-v1.yml
@@ -4,6 +4,7 @@ spring:
             globalcors:
               corsConfigurations:
                 '[/**]':
+                  allowedOriginPatterns: "*"
                   allow-credentials: true   #추가
                   allowedHeaders:
                     - x-requested-with
