applied kubernetes settigs

--- a/direct-deal-account-service/src/main/resources/application-dev.properties
+++ b/direct-deal-account-service/src/main/resources/application-dev.properties
@@ -33,11 +33,20 @@ jwt.access-token-validity-in-seconds=3600
 jwt.refresh-token-validity-in-seconds=2592000
 
 spring.output.ansi.enabled=always
-#logging.file.path=.
+# logging.file.path=/tmp
 logging.level.kr.co.directdeal.accountservice=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+# spring.devtools.restart.enabled=true
+# spring.devtools.livereload.enabled=true
+
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+
+#management.server.port=9000
+#management.endpoints.web.base-path=/
+# management.endpoints.enabled-by-default=true
+# management.endpoints.web.exposure.include=health
+#management.endpoints.web.exposure.exclude=env,beans
