--- a/direct-deal-sale-catalog-service/src/main/resources/application.properties
+++ b/direct-deal-sale-catalog-service/src/main/resources/application.properties
@@ -102,5 +102,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # logging.file.path=.
 logging.level.kr.co.directdeal=DEBUG
 
-management.endpoints.enabled-by-default=true
-management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
