--- a/direct-deal-transaction-history-service/src/main/resources/application.properties
+++ b/direct-deal-transaction-history-service/src/main/resources/application.properties
@@ -84,6 +84,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.data.mongodb.password=user
 #spring.data.mongodb.database=test
 
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
 #management.server.port=9000
 #management.endpoints.web.base-path=/
 #management.endpoints.enabled-by-default=true
