--- a/direct-deal-account-service/build.gradle
+++ b/direct-deal-account-service/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	// runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	
-	developmentOnly "org.springframework.boot:spring-boot-devtools"
+	// developmentOnly "org.springframework.boot:spring-boot-devtools"
 	
 	//testImplementation project(':direct-deal-common')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
