--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -67,6 +67,8 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=secret
 spring.data.mongodb.database=SALE_SERVICE_DB
 
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
 #management.server.port=9000
 #management.endpoints.web.base-path=/
 #management.endpoints.enabled-by-default=true
