--- a/deployment/kubernetes/direct-deal-chatting-service.yml
+++ b/deployment/kubernetes/direct-deal-chatting-service.yml
@@ -55,6 +55,9 @@ spec:
       - name: chatting-service
         image: localhost:5000/direct-deal-chatting-service:latest
         imagePullPolicy: Always
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: "dev"
         ports:
         - containerPort: 8085
           name: httpport
