--- a/deployment/kubernetes/direct-deal-sale-catalog-service.yml
+++ b/deployment/kubernetes/direct-deal-sale-catalog-service.yml
@@ -55,6 +55,9 @@ spec:
       - name: sale-catalog-service
         image: localhost:5000/direct-deal-sale-catalog-service:latest
         imagePullPolicy: Always
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: "dev"
         ports:
         - containerPort: 8082
           name: httpport
