--- a/deployment/kubernetes/direct-deal-transaction-history-service.yml
+++ b/deployment/kubernetes/direct-deal-transaction-history-service.yml
@@ -52,6 +52,9 @@ spec:
       - name: transaction-history-service
         image: localhost:5000/direct-deal-transaction-history-service:latest
         imagePullPolicy: Always
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: "dev"
         ports:
         - containerPort: 8083
           name: httpport
