--- a/direct-deal-gateway/build.gradle
+++ b/direct-deal-gateway/build.gradle
@@ -26,6 +26,8 @@ ext {
 dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:2.0.3'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
