--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:2.0.3'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
 	//implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0'
 
